# vgarchive

./: .envrc  .exrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Caddyfile  README.md  codebook.toml  flake.nix  hypercorn.toml  justfile  manage.py  pyproject.toml
.zed/: settings.json  tasks.json
nix/: package.nix  validate-pyproject-schema-store.nix  validate-pyproject.nix
scripts/: add-class.py  bi-css.py  bs-css.py  classes.json  min-fonts.py
vgarchive/: __init__.py  admin.py  asgi.py  forms.py  settings.py  urls.py  utils.py  views.py
vgarchive/charities/: admin.py  apps.py  models.py  urls.py  views.py
vgarchive/charities/migrations/: 0001_initial.py  0002_charity_founded_charity_icon_alter_charity_homepage.py  0002_charity_short_name.py  0003_alter_charity_options.py  0004_charity_bluesky_charity_facebook_charity_linkedin_and_more.py  0005_remove_charity_facebook_remove_charity_linkedin.py  0006_alter_charity_id.py  0007_alter_charity_icon.py  0008_alter_charity_icon.py  0009_alter_charity_icon.py  0010_alter_charity_bluesky.py
vgarchive/charities/templates/: charity-detail.html  charity-list.html
vgarchive/events/: admin.py  apps.py  models.py  urls.py  views.py
vgarchive/events/migrations/: 0001_initial.py  0002_event_banner.py  0002_remove_event_charity_id_remove_event_marathon_id_and_more.py  0003_event_short_name.py  0003_remove_event_marathon_event_organization.py  0004_event_num_donations.py  0005_event_end_datetime_event_start_datetime.py  0006_alter_event_id.py  0007_event_duration.py  0008_alter_event_end_datetime_alter_event_start_datetime.py  0009_rename_end_datetime_event_end_date_and_more.py  0010_alter_event_banner.py  0011_alter_event_banner.py  0012_alter_event_banner.py
vgarchive/events/templates/: event-detail.html  event-list.html
vgarchive/forms/: import.py
vgarchive/marathons/: admin.py  apps.py  models.py  urls.py  views.py
vgarchive/marathons/migrations/: 0001_initial.py  0002_alter_marathon_banner_alter_marathon_icon.py  0003_remove_marathon_short_id.py  0004_alter_marathon_youtube.py
vgarchive/migrations/: 0001_initial.py  0002_alter_event_charity_alter_event_organization_and_more.py  0003_alter_event_source.py  0004_run_source.py
vgarchive/models/: __init__.py  charity.py  event.py  organization.py  run.py
vgarchive/organizations/: admin.py  apps.py  models.py  urls.py  views.py
vgarchive/organizations/migrations/: 0001_initial.py  0002_alter_marathon_banner_alter_marathon_icon.py  0002_alter_organization_name.py  0003_alter_organization_table_comment.py  0003_remove_marathon_short_id.py  0004_alter_marathon_youtube.py  0004_organization_bluesky.py  0005_organization_delete_marathon.py  0005_organization_facebook.py  0006_organization_tracker.py  0007_remove_organization_active.py  0008_remove_organization_facebook.py  0009_alter_organization_id.py  0010_alter_organization_banner_alter_organization_icon.py  0011_alter_organization_banner.py  0012_alter_organization_banner_alter_organization_icon.py  0013_alter_organization_bluesky.py
vgarchive/organizations/templates/: organization-detail.html  organization-list.html
vgarchive/runs/: admin.py  apps.py  models.py  urls.py  views.py
vgarchive/runs/migrations/: 0001_initial.py  0002_run_category.py  0003_game_runner_remove_run_runners_alter_run_twitch_and_more.py  0004_alter_run_twitch.py  0005_alter_game_id.py  0006_alter_game_id.py  0007_alter_run_id.py  0008_alter_runner_id.py  0009_alter_runner_bluesky.py
vgarchive/runs/templates/: run-detail.html  run-list.html
vgarchive/settings/: __init__.py  common.py  dev.py
vgarchive/static/css/: fonts.css
vgarchive/templates/: components.yaml
vgarchive/templates/cotton/: footer.html  head.html  navbar.html
vgarchive/templates/cotton/card/: charity.html  event.html
vgarchive/templates/cotton/meta/: description.html
vgarchive/templates/django/forms/widgets/: file.html  select.html  url.html
vgarchive/templates/marathons/: detail.html  list.html
vgarchive/templates/organizations/: detail.html  list.html
vgarchive/templates/vgarchive/: base.html  index.html  table-template.html
vgarchive/templates/vgarchive/detail/: charity.html  event.html  organization.html  run.html
vgarchive/templates/vgarchive/forms/: base-create.html  base-ingest.html  charity-create.html  charity-ingest.html  event-create.html  game-create.html  game-ingest.html  organization-create.html  run-create.html  run-ingest.html  runner-create.html  runner-ingest.html
vgarchive/templates/vgarchive/list/: charity.html  event.html  organization.html  run.html
vgarchive/templates/vgarchive/partials/: footer.html  head.html  navbar.html
vgarchive/templates/vgarchive/partials/meta/: title.html
vgarchive/templatetags/: __init__.py  vgarchive.py
vgarchive/theme/: README.md  apps.py
vgarchive/theme/static_src/: classes.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js
vgarchive/theme/static_src/src/: styles.css
vgarchive/theme/static_src/src/bs-icons/: bootstrap-icons.css  bootstrap-icons.min.css
vgarchive/utils/: __init__.py  views.py
vgarchive/utils/gdq/: __init__.py
vgarchive/validators/: __init__.py  bluesky.py
vgarchive/views/: __init__.py  charity.py  create.py  event.py  ingest.py  organization.py  run.py
