[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vgarchive.run"
version = "0.1.0"
description = "Video Game Marathon VOD Archive"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pyrox/dish", email = "pyrox@pyrox.dev" }]
maintainers = [{ name = "Pyrox/dish", email = "pyrox@pyrox.dev" }]
keywords = ["videogames", "archive", "vods", "marathon", "charity"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Django :: 5.1",
  "Intended Audience :: End Users/Desktop",
  "License :: Free for non-commercial use",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Multimedia :: Video :: Display",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Mirroring",
  "Typing :: Typed",
]
dependencies = [
  "requests >= 2.30.0",
  "django >= 5.1",
  "django-ninja>=1.3.0",
  "django-allauth[socialaccount]>=64.0.0",
  "docutils>=0.19.0",
  "pillow~=10.0.0",
  "hypercorn[uvloop]>=0.17.0",
  "slippers",
  "django-tailwind[reload]",
  "django-bootstrap-icons@git+https://github.com/pyrox0/django-bootstrap-icons.git@master#0.10.1",
]

[project.urls]
Homepage = "https://github.com/pyrox0/vgarchive.run"
Documentation = "https://github.com/pyrox0/vgarchive.run"
Repository = "https://github.com/pyrox0/vgarchive.run"
Issues = "https://github.com/pyrox0/vgarchive.run/issues"

[tool.setuptools]
packages = ["vgarchive"]

[tool.djlint]
indent = 2
profile = "django"
use_gitignore = true
