[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vgarchive.run"
version = "0.1.0"
description = "Video Game Marathon VOD Archive"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pyrox/dish", email = "pyrox@pyrox.dev" }]
maintainers = [{ name = "Pyrox/dish", email = "pyrox@pyrox.dev" }]
keywords = ["videogames", "archive", "vods", "marathon", "charity"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Django :: 5.1",
  "Intended Audience :: End Users/Desktop",
  "License :: Free for non-commercial use",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Multimedia :: Video :: Display",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Mirroring",
  "Typing :: Typed",
]
dependencies = [
  "django >= 5.1",
  "django-ninja>=1.3.0",
  "django-allauth[socialaccount]>=64.0.0",
  "docutils>=0.19.0",
  "pillow>=10.0.0",
  "slippers~=0.6.0",
  "django-tailwind~=3.8.0",
  "django-bootstrap-icons",
]

[project.urls]
Homepage = "https://github.com/pyrox0/vgarchive.run"
Documentation = "https://github.com/pyrox0/vgarchive.run"
Repository = "https://github.com/pyrox0/vgarchive.run"
Issues = "https://github.com/pyrox0/vgarchive.run/issues"

[tool.djlint]
ignore = "H006"
indent = 2
profile = "django"
use_gitignore = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
indent-width = 4

[tool.ruff.format]
exclude = ["vgarchive/**/migrations/*.py", "manage.py"]
line-ending = "lf"
indent-style = "space"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "COM",
  "DJ",
  "DTZ",
  "ERA",
  "E4",
  "E7",
  "E9",
  "F",
  "FURB",
  "FLY",
  "INP",
  "LOG",
  "PERF",
  "PIE",
  "PTH",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TCH",
  "TID",
  "UP",
]
ignore = ["ANN003", "COM812"]

[tool.ruff.lint.per-file-ignores]
"vgarchive/settings/*.py" = ["ALL"]
"vgarchive/**/migrations/*.py" = ["ALL"]
"manage.py" = ["ALL"]

[tool.setuptools]
packages = ["vgarchive"]

[tool.uv]
dev-dependencies = [
  "hypercorn[uvloop]>=0.17.0",
  "django-browser-reload~=1.15.0",
  "django-admin-shell>=2.0.0",
]
package = false

[tool.uv.sources]
django-bootstrap-icons = { git = "https://github.com/pyrox0/django-bootstrap-icons.git" }
